[tool.poetry]
name = "dl-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
pandas = "^1.3.1"
torch = "^1.9.0"
seaborn = "^0.11.1"
nltk = "^3.6.2"
torchtext = "^0.10.0"
spacy = "^3.1.1"
scikit-learn = "^0.24.2"
keras = "^2.6.0"
tensorflow = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
